--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,21 @@ the relevant Commercial Agreement.
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.tinkerpop</groupId>
+      <artifactId>pipes</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.tinkerpop</groupId>
+      <artifactId>gremlin</artifactId>
+      <version>1.4-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+
+
     <!-- Jackson Dependencies -->
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
