--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
     <cxf.version>2.3.1</cxf.version>
     <servlet-api.version>2.5</servlet-api.version>
     <neo4j.version>1.6-SNAPSHOT</neo4j.version>
-    <blueprints.version>1.1</blueprints.version>
+    <gremlin.version>1.5-SNAPSHOT</gremlin.version>
+    <blueprints.version>1.2-SNAPSHOT</blueprints.version>
     <jersey.server.version>1.6</jersey.server.version>
     <license-text.header>GPL-3-header.txt</license-text.header>
   </properties>
@@ -114,18 +115,10 @@ the relevant Commercial Agreement.
       <version>${blueprints.version}</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
-      <groupId>com.tinkerpop</groupId>
-      <artifactId>pipes</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.tinkerpop</groupId>
-      <artifactId>gremlin</artifactId>
-      <version>1.4-SNAPSHOT</version>
+      <groupId>com.tinkerpop.gremlin</groupId>
+      <artifactId>gremlin-java</artifactId>
+      <version>${gremlin.version}</version>
       <scope>provided</scope>
     </dependency>
 
