--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <jackson.version>1.9.2</jackson.version>
     <cxf.version>2.3.1</cxf.version>
     <servlet-api.version>2.5</servlet-api.version>
-    <neo4j.version>1.6-SNAPSHOT</neo4j.version>
+    <neo4j.version>1.6.M03</neo4j.version>
     <gremlin.version>1.5-SNAPSHOT</gremlin.version>
     <blueprints.version>1.2-SNAPSHOT</blueprints.version>
     <jersey.server.version>1.6</jersey.server.version>
