--- a/pom.xml
+++ b/pom.xml
@@ -211,26 +211,6 @@ the relevant Commercial Agreement.
     </resources>
     <plugins>
       <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <descriptors>
-            <descriptor>src/main/assembly/server-plugin.xml</descriptor>
-            <descriptor>src/main/assembly/docs-assembly.xml</descriptor>
-          </descriptors>
-        </configuration>
-        <executions>
-          <execution>
-            <id>make-assembly</id>
-            <!-- this is used for inheritance merges -->
-            <phase>package</phase>
-            <!-- bind to the packaging phase -->
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
@@ -243,7 +223,7 @@ the relevant Commercial Agreement.
     <repository>
       <id>neo4j-build</id>
       <name>neo4j.org repository</name>
-      <url>https://repo.neo4j.org/content/groups/everything</url>
+      <url>https://m2.neo4j.org/content/groups/everything</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
