--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.neo4j.build</groupId>
     <artifactId>parent-central</artifactId>
     <relativePath />
-    <version>32</version>
+    <version>35</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -233,7 +233,7 @@ the relevant Commercial Agreement.
   <distributionManagement>
     <site>
       <id>neo4j-site</id>
-      <url>scpexe://components.neo4j.org/home/neo/components/${project.artifactId}/${project.version}</url>
+      <url>scpexe://static.neo4j.org/var/www/components.neo4j.org/${project.artifactId}/${project.version}</url>
     </site>
   </distributionManagement>
 
